// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/project/ExploreSinglePage.vue handles an invalid type 1`] = `
<div>
  <!---->
</div>
`;

exports[`pages/project/ExploreSinglePage.vue renders the page 1`] = `
<div>
  <recordviewpage-stub></recordviewpage-stub>
</div>
`;
